# Agribot_TFM-MII

./: README.md  rviz_config.rviz
agribot_croprow_generator/: BP_header.xml  BP_model.xml  CropRow_Headers.xml  CropRow_Models.xml  FarmWithCropRow.world  GazeboCropRowGenerator.py  TEST.py  TEST2.py  farm_P0.xml  farm_P1.xml  farm_P2.xml  farm_P3.xml
agribot_gazebo/launch/: agribot_farm.launch
agribot_gazebo/worlds/: FarmWithCropRow.world  ejemploCorrecto2plants.world  farmWith1CropRow.world  farmWith1CropRow_copy.world
agribot_launch/launch/: demo.launch
agribot_navigation/: CMakeLists.txt  package.xml
agribot_navigation/launch/: agribot_move.launch  agribot_move_base_flex.launch  agribot_navigation.launch
agribot_navigation/maps/: map.yaml
agribot_navigation/params/: base_local_planner_params.yaml  costmap.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner.yaml  local_costmap_params.yaml  teb_local_planner.yaml
agribot_navigation/params/move_base_flex/: move_base_flex.yaml  recovery_behaviors.yaml
agribot_navigation/src/: mvto2pto.py
