<?xml version="1.0"?>
<package>
  <name>agribot_navigation</name>
  <version>0.0.0</version>
  <description>The package is used to run the navigation stack</description>

  <maintainer email="alireza.elecat@gmail.com">Alireza Ahmadi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>

  <build_depend>mbf_abstract_nav</build_depend>
  <build_depend>mbf_costmap_core</build_depend>
  <build_depend>mbf_costmap_nav</build_depend>
  <build_depend>mbf_msgs</build_depend>
  <build_depend>mbf_simple_nav</build_depend>
  <build_depend>mbf_utility</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend> geometry_msgs</build_depend>


  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mbf_abstract_nav</run_depend>
  <run_depend>mbf_costmap_core</run_depend>
  <run_depend>mbf_costmap_nav</run_depend>
  <run_depend>mbf_msgs</run_depend>
  <run_depend>mbf_simple_nav</run_depend>
  <run_depend>mbf_utility</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>



  <run_depend>robot_localization</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
